After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 743592 - crash on link click in about dialogue
crash on link click in about dialogue
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
: 743598 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2015-01-27 17:16 UTC by Christian Persch
Modified: 2015-01-28 21:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GtkAboutDialog: Fix crash on link click (1014 bytes, patch)
2015-01-27 17:18 UTC, Christian Persch
committed Details | Review

Description Christian Persch 2015-01-27 17:16:49 UTC
From https://bugzilla.redhat.com/show_bug.cgi?id=1186069 :

#0 strchr at ../sysdeps/x86_64/strchr.S:32
#1 g_param_spec_pool_lookup at gparam.c:1070
#2 g_object_set_valist at gobject.c:2121
#3 g_object_set at gobject.c:2269
#4 follow_if_link at gtkaboutdialog.c:1929
#5 text_view_event_after at gtkaboutdialog.c:1996
Comment 1 Christian Persch 2015-01-27 17:18:14 UTC
Created attachment 295555 [details] [review]
GtkAboutDialog: Fix crash on link click
Comment 2 Matthias Clasen 2015-01-27 17:21:27 UTC
Review of attachment 295555 [details] [review]:

thanks, looks right. for 3.14 too, if you have chance
Comment 3 Christian Persch 2015-01-27 19:20:32 UTC
*** Bug 743598 has been marked as a duplicate of this bug. ***
Comment 4 Matthias Clasen 2015-01-28 21:33:51 UTC
Attachment 295555 [details] pushed as 066646c - GtkAboutDialog: Fix crash on link click