GtkAboutDialog: Fix crash on link click

https://bugzilla.gnome.org/show_bug.cgi?id=743592